samples/_failures_safe/1761320844_7a4a41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fddcfaf.c: In function ‘primMST’:
./samples/SAFE/__tmp_8fddcfaf.c:126:17: error: expected identifier at end of input
  126 |                 int v = (graph->edges[i].src == u) ? graph->edges[i].
      |                 ^~~
./samples/SAFE/__tmp_8fddcfaf.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fddcfaf.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fddcfaf.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8fddcfaf.c:126:17: error: expected declaration or statement at end of input
